--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -25,9 +25,6 @@
     <Filter Include="Header Files\Drawable">
       <UniqueIdentifier>{4858b1ec-45ea-456d-8620-487175c38544}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Macros">
-      <UniqueIdentifier>{12714e1a-204f-4931-a322-e71f40883252}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Binable">
       <UniqueIdentifier>{ca79c9ff-e453-4dde-984d-6d9cefe9c8b8}</UniqueIdentifier>
     </Filter>
@@ -36,9 +33,6 @@
     </Filter>
     <Filter Include="Header Files\Geometry">
       <UniqueIdentifier>{a94bc094-012f-4380-afc5-b970bf64565c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\imgui">
-      <UniqueIdentifier>{61b44ed0-4620-4934-8f4c-bfc62f217c24}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\Physics">
       <UniqueIdentifier>{ea66ef9b-7d68-4375-b9ff-504a20610667}</UniqueIdentifier>
@@ -78,6 +72,12 @@
     </Filter>
     <Filter Include="Source Files\ECS">
       <UniqueIdentifier>{b88cf7c6-cec5-4299-b7b8-fd01972cee40}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\CommonTool\imgui">
+      <UniqueIdentifier>{61b44ed0-4620-4934-8f4c-bfc62f217c24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Macros">
+      <UniqueIdentifier>{12714e1a-204f-4931-a322-e71f40883252}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -133,22 +133,22 @@
       <Filter>Source Files\Binable</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_dx11.cpp">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_win32.cpp">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="ImguiManager.cpp">
       <Filter>Source Files</Filter>
@@ -336,28 +336,28 @@
       <Filter>Header Files\Bindable</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imconfig.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_dx11.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_win32.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>Header Files\imgui</Filter>
+      <Filter>Header Files\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="ImguiManager.h">
       <Filter>Header Files</Filter>
