--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -524,60 +524,60 @@
     <None Include="DXTrace.inl">
       <Filter>Dxerr</Filter>
     </None>
-    <None Include="HLSL\Transform.hlsli">
+    <None Include="Shader\Transform.hlsli">
       <Filter>Shader\Common</Filter>
     </None>
-    <None Include="HLSL\LightOptions.hlsli">
+    <None Include="Shader\LightOptions.hlsli">
       <Filter>Shader\Common</Filter>
     </None>
-    <None Include="HLSL\ShaderOptions.hlsli">
+    <None Include="Shader\LightVectorData.hlsli">
       <Filter>Shader\Common</Filter>
     </None>
-    <None Include="HLSL\LightVectorData.hlsli">
+    <None Include="Shader\ShaderOptions.hlsli">
       <Filter>Shader\Common</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="HLSL\SolidVS.hlsl">
+    <FxCompile Include="Shader\Light_PS.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\SolidPS.hlsl">
+    <FxCompile Include="Shader\Light_VS.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongPS.hlsl">
+    <FxCompile Include="Shader\PhongPS.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongVS.hlsl">
+    <FxCompile Include="Shader\PhongPSNormalMap.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongPSSpecMap.hlsl">
+    <FxCompile Include="Shader\PhongPSNormalMapObject.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongPSNormalMap.hlsl">
+    <FxCompile Include="Shader\PhongPSNotex.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongPSSpecNormalMap.hlsl">
+    <FxCompile Include="Shader\PhongPSSpec.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongVSNormalMap.hlsl">
+    <FxCompile Include="Shader\PhongPSSpecMap.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongPSNormalMapObject.hlsl">
+    <FxCompile Include="Shader\PhongPSSpecNormalMap.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongVSNotex.hlsl">
+    <FxCompile Include="Shader\PhongVS.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongPSNotex.hlsl">
+    <FxCompile Include="Shader\PhongVSNormalMap.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\PhongPSSpec.hlsl">
+    <FxCompile Include="Shader\PhongVSNotex.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\Light_PS.hlsl">
+    <FxCompile Include="Shader\SolidPS.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="HLSL\Light_VS.hlsl">
+    <FxCompile Include="Shader\SolidVS.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
   </ItemGroup>
