change cbuffer slot

--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -134,7 +134,12 @@ Size=276,158
 Collapsed=0
 
 [Window][Game State]
-Pos=20,34
+Pos=23,40
 Size=354,161
+Collapsed=0
+
+[Window][Grid]
+Pos=946,76
+Size=346,223
 Collapsed=0
 
