--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -24,7 +24,7 @@ Size=262,222
 Collapsed=0
 
 [Window][Light]
-Pos=1139,41
+Pos=1309,24
 Size=288,351
 Collapsed=0
 
@@ -134,12 +134,12 @@ Size=276,158
 Collapsed=0
 
 [Window][Game State]
-Pos=250,45
+Pos=14,25
 Size=354,161
 Collapsed=0
 
 [Window][Grid]
-Pos=705,45
+Pos=791,51
 Size=346,223
 Collapsed=0
 
@@ -151,5 +151,15 @@ Collapsed=0
 [Window][Samba]
 Pos=953,288
 Size=335,197
+Collapsed=0
+
+[Window][Blue Plane]
+Pos=1463,390
+Size=124,243
+Collapsed=0
+
+[Window][Red Plane]
+Pos=1324,398
+Size=124,243
 Collapsed=0
 
